maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:13: error: not found: value ||
    while (!estSurBiscuit() && getDirection != Direction.NORD) || (getDirection != Direction.NORD && compt != 0){               keepHandOnSideWall()
                                                               ^